--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -5,19 +5,48 @@
 <title>Quizify</title>
 
 <style>
-    .btn {
-        display: inline-block;
-        background-color: #008CBA; /* blue */
-        color: white;
-        padding: 14px 20px;
-        margin: 8px 0;
-        border: none;
-        cursor: pointer;
-        text-align: center;
-        text-decoration: none;
+    body {
+        color: #c5c6c7;
+        margin-left: 30px;
+        margin-right: 30px;
     }
-    .btn:hover {
-        background-color: #007B9A;
+    h1 {
+        color:#66fcf1;
+        text-align: center;
+        font-size: 5em;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+    h2 {
+        color: #45a29e;
+        font-size: 2em;
+        text-align: center;
+    }
+    h3 {
+        margin-left: 70px;
+        margin-right: 70px;
+        text-align: center;
+    }
+    h4 {
+        font-size: 1.25em;
+        color: #45a29e;
+        text-align: center;
+    }
+    .btn-primary {
+        display: inline-block;
+        background-color: #66fcf1;
+        color: #1f2833;
+        text-decoration: none;
+        font-size: 1em;
+        padding: 12px 24px;
+        border-radius: 20px;
+        border: none;
+        transition: all 0.3s ease 0s;
+    }
+
+    .btn-primary:hover {
+        background-color: #54d4dd;
+        color: #ffffff;
     }
     </style>
     
@@ -25,12 +54,13 @@
 
 {% block body %} 
 
-<h1 style="text-align: center; font-size: 2.5em; margin-bottom: 0;">🎵Quizify🎵</h1>
-<h2 style = "text-align: center;">Thanks For Playing!</h2>
-<h2 style = "text-align: center;">Playlist: {{ playlist_name }} </h2>
+<h1>Quizify</h1>
+<h2>Thanks For Playing!</h2>
+<h2 >Playlist: {{ playlist_name }} </h2>
 <!-- calculate max points possible by multipilying num_songs by 100-->
-<h4 style = "text-align: center;">Max Points Possible: {{ max_possible_score }}  ({{num_songs}} songs)</h4>
-<h2 style = "text-align: center;">You Got {{ total_score }} Points</h2>
+
+<h2>You Got {{ total_score }} Points</h2>
+<h4>Max Points Possible: {{ max_possible_score }}  ({{num_songs}} songs)</h4>
 
 
 
@@ -62,12 +92,14 @@
 </div>
 
 
-
+<br>
+<br>
 
 <div style="display: flex; justify-content: space-around;">
-    <a href="/num_songs_select" class="btn">Replay Same Playlist</a>
-    <a href="/playlist_select" class="btn">Select a Different Playlist</a>
-    <a href="/logout" class="btn">Logout</a>
+    <a href="/main_page" class = "btn btn-primary">Play Again</a>
+    <a href="/num_songs_select" class="btn btn-primary">Select a Different Number of Songs</a>
+    <a href="/playlist_select" class="btn btn-primary">Select a Different Playlist</a>
+    <a href="/logout" class="btn btn-primary">Logout</a>
 </div>
 
 {% endblock %}
