--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -12,6 +12,8 @@
         color:#66fcf1;
         text-align: center;
         font-size: 5em;
+        margin-bottom: 0;
+        margin-top: 0;
     }
     h2 {
         color: #45a29e
@@ -80,7 +82,7 @@
      <a style = "text-align: left;" href="{{ url_for('logout') }}">Logout</a>
 </nav>
 
-<h1 style=" margin-bottom: 0; margin-top: 0;">Quizify</h1>
+<h1>Quizify</h1>
 
 <h2>Objective</h2>
 <body>The goal is to indentify both the title of the song and the artist(s) of the song.</body>
