--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -7,6 +7,7 @@
     body {
         text-align: center;
         color: #c5c6c7;
+        background: #0b0c10
     }
     h1 {
         color:#66fcf1;
