moved some stuff

--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -9,6 +9,7 @@
         color: #c5c6c7;
         margin-left: 30px;
         margin-right: 30px;
+        background: #0b0c10
     }
     h1 {
         color:#66fcf1;
