--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -7,9 +7,11 @@
     body {
         text-align: center;
         color: #c5c6c7;
+        font-family: "Helvetica Neue", sans-serif;
         background: #0b0c10
     }
     h1 {
+        font-family: "Helvetica Neue", sans-serif;
         color:#66fcf1;
         text-align: center;
         font-size: 5em;
