moved some stuff

--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -85,7 +85,7 @@
      <a style = "text-align: left;" href="{{ url_for('logout') }}">Logout</a>
 </nav>
 
-<h1>Quizify</h1>
+<h1>Quiz</h1>
 
 <h2>Objective</h2>
 <body>The goal is to indentify both the title of the song and the artist(s) of the song.</body>
