--- a/templates/num_songs_select.html
+++ b/templates/num_songs_select.html
@@ -141,6 +141,7 @@
         </form>
         
         <p style="font-size: 0.5em;">*May take a little longer for liked songs playlist</p>
+        <p style="font-size: 0.5em;">*Takes about 1 second for every 10 songs</p>
     </div>
 </div>
 
