made first set of feedback changes

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -410,7 +410,7 @@
                 });
             }
 
-            if (song_num == total_songs - 1) {
+            if (song_num == total_songs) {
                 document.getElementById('next-song-button').innerHTML = 'See Results';
 
             }
